--- a/xk-truck-frontend/src/layouts/Layout.astro
+++ b/xk-truck-frontend/src/layouts/Layout.astro
@@ -125,6 +125,15 @@ const canonicalUrl = canonical || new URL(Astro.url.pathname, siteUrl).href;
         ? schema.map(s => <script type="application/ld+json" set:html={JSON.stringify(s)} />)
         : <script type="application/ld+json" set:html={JSON.stringify(schema)} />
     )}
+    
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L4H3GET9H5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-L4H3GET9H5');
+    </script>
   </head>
   <body class="min-h-screen flex flex-col bg-gray-50">
     <Header />
